@@ -97,8 +97,7 @@ public class SysMenuService {
         List<SysMenu> noButtonMenus = allMenus.stream()
                 .filter(menu -> !menu.getIsButton())
                 .filter(menu-> StatusEnum.ENABLE.getValue() == menu.getStatus())
-                .collect(Collectors.toList());
-
+                .toList();
 
         Map<Long, SysMenu> parentMap = noButtonMenus.stream()
                 .collect(Collectors.toMap(SysMenu::getMenuId, Function.identity()));
@@ -107,24 +106,27 @@ public class SysMenuService {
                 .collect(Collectors.toMap(Function.identity(), RouterDTO::new));
 
         List<RouterDTO> roots = new ArrayList<>();
-
-        for (Map.Entry<SysMenu, RouterDTO> entry : routerMap.entrySet()) {
-            if (entry.getKey().getParentId() == null || entry.getKey().getParentId() == 0) {
-                roots.add(entry.getValue());
+        for (SysMenu sysMenu : noButtonMenus) {
+            RouterDTO routerDTO = routerMap.get(sysMenu);
+            if (sysMenu.getParentId() == null || sysMenu.getParentId() == 0) {
+                roots.add(routerDTO);
             } else {
-                SysMenu parentSysMenu = parentMap.get(entry.getKey().getParentId());
-                RouterDTO routerDTO = routerMap.get(parentSysMenu);
-                if (routerDTO == null) {
+                SysMenu parentSysMenu = parentMap.get(sysMenu.getParentId());
+                RouterDTO childRouterDTO = routerMap.get(parentSysMenu);
+                if (childRouterDTO == null) {
                     continue;
                 }
-                List<RouterDTO> children = Objects.requireNonNullElse(routerDTO.getChildren(), new ArrayList<>());
-                children.add(entry.getValue());
-                routerDTO.setChildren(children);
+                List<RouterDTO> dtoChildren = childRouterDTO.getChildren();
+                if (dtoChildren == null) {
+                    dtoChildren = new ArrayList<>();
+                    childRouterDTO.setChildren(dtoChildren);
+                }
+                dtoChildren.add(routerDTO);
             }
         }
 
         roots = roots.stream()
-                .sorted(Comparator.comparing(it -> Optional.ofNullable(it.getMeta()).map(MetaDTO::getRank).orElse(0)))
+                .sorted(Comparator.comparing(it -> Optional.ofNullable(it.getMeta()).map(MetaDTO::getRank).orElse(-1)))
                 .toList();
 
         sortRouterDTOChildren(roots);
@@ -143,7 +145,7 @@ public class SysMenuService {
 
             if (CollectionUtils.isNotEmpty(current.getChildren())) {
                 List<RouterDTO> sortedChildren = current.getChildren().stream()
-                        .sorted(Comparator.comparing(it -> Optional.ofNullable(it.getMeta()).map(MetaDTO::getRank).orElse(0)))
+                        .sorted(Comparator.comparing(it -> Optional.ofNullable(it.getMeta()).map(MetaDTO::getRank).orElse(-1)))
                         .toList();
                 current.setChildren(sortedChildren);
 
